# invoice-recognition-app

./: .gitignore  CONTEXT.md  README.md  design.md  index.html  package-lock.json  package.json  todo.md  uno.config.ts  vite.config.js  待优化.md
docs/: DESIGN-project-worker.md
docs/adr/: 0001-ocr-engine-paddleocr-vl-api.md  0002-supplier-credentials-local-ocr-and-fs-storage.md  0003-recognized-store-unified-json-in-project-dir.md  0004-vue-router-and-pinia-incremental.md  0005-precision-ledger-design-system-phased-refactor.md
scripts/: copy-pdf-worker.mjs  e2e-selftest.mjs  invoice-batch.mjs  selftest.mjs  test-invoices.mjs  vl-batch-test.mjs  vl-parse-check.mjs
src/: App.vue  invoiceStore.js  main.js  store.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: DeliveryTree.vue  ExportPanel.vue  FieldsTable.vue  FileCard.vue  HoverZoom.vue  InvoiceCard.vue  InvoiceLedgerPanel.vue  InvoiceLedgerViewer.vue  InvoicePreview.vue  InvoicePrintPanel.vue  InvoiceRow.vue  InvoiceUpload.vue  OcrGateDialog.vue  PartitionBar.vue  ProblemDialog.vue  ProjectFormDialog.vue  SaveToStorePanel.vue  SettingsDialog.vue  SupplierDetail.vue  SupplierFormDialog.vue  ToastHost.vue  UploadZone.vue  WorkerFormDialog.vue
src/lib/: app-settings.js  credential-ocr.js  delivery-tree.js  excel.js  export.js  invoice-dedupe.js  invoice-excel.js  invoice-export-package.js  invoice-filename.js  invoice-layout.js  invoice-ledger.js  invoice-parse.js  invoice-reimburse.js  naming.js  ocr-vl.js  ocr.js  pdf.js  (+16 more)
(+30 files in other folders)
