[package]
name = "songhuodan-ocr-app"
version = "0.4.1"
description = "送货单和发票识别整理助手"
authors = ["zodea"]
edition = "2021"

[lib]
name = "songhuodan_ocr_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
base64 = "0.22"
# 云识别（PaddleOCR 官方 API 无 CORS 头，需在 Rust 侧发请求）
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
